Fix banner-caption vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -145,11 +145,11 @@ p span{
     content: "";
 }
 .banner-caption {
-    position: absolute;
-    top: 20%;
+    position:absolute;
+    top: 50%;
     width: 100%;
+    transform: translateY(-50%);
     z-index: 2;
-    padding-bottom:10%; 
 }
 
 .social-icon:not(:last-of-type){
